<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="food_style">
        <item>选择菜系</item>
        <item>川菜</item>
        <item>粤菜</item>
        <item>鲁菜</item>
        <item>湘菜</item>
        <item>闽菜</item>
        <item>徽菜</item>
        <item>苏菜</item>
        <item>浙菜</item>
    </string-array>

    <string name="app_name">菜谱大全</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_index">首页</string>
    <string name="text_mine">我的</string>
    <string name="text_add">添加</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_account">账号</string>
    <string name="text_login">登录</string>
    <string name="text_new_register">新用户注册</string>
    <string name="text_password">密码</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="text_register">注册</string>
    <string name="text_dish_name">名称：</string>
    <string name="text_dish_type">菜系：</string>
    <string name="text_search_hint">搜索菜名、菜类别</string>
    <string name="title_activity_deatil">DeatilActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="text_select_category">选择菜系</string>

</resources>