<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar"
        android:background="@color/app_theme_color"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_index"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp" >

        <LinearLayout
            android:id="@+id/ll_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_index"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/selector_main_index" />

            <TextView
                android:id="@+id/tv_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_index"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/selector_main_add" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/selector_main_mine" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mine"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>